test/libyul/yulSyntaxTests/hex_expression.yul
{
    pop(hex"2233")
}
// ----
// ParserError 2314: (13-19): Expected ',' but got 'StringLiteral'
